--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
 pwd  - present directory
 
 ls -la -- list all 
+
+git remote add git-tut https://github.com/shahinbdboy/git-tut.git
+
+
+git remote
+
+git push -u git-tut master
+
+
